# PT2

./: .gitignore  CMakeLists.txt  imgui.ini
assets/shaders/: shader.frag  shader.vert
src/: main.cpp
src/glad/: glad.c  glad.h
src/imgui/: imgui_impl_opengl3.cpp
src/pt2/: camera.cpp  camera.h  geometry.cpp  geometry.h  imgui_custom.h  pt2.cpp  pt2.h  sampling.h  structs.cpp  structs.h  thread_pool.cpp  thread_pool.h  vec3.cpp  vec3.h
